till search api

--- a/.env
+++ b/.env
@@ -3,3 +3,8 @@ port = 8080
 mongo_url = "mongodb://127.0.0.1:27017/Ecommerce"
 
 JWT_SECRET = shubham_soni_2001
+
+cloudinary_cloud_name= 'dkh5hwdvu'
+cloudinary_api_key= '876916423722469' 
+cloudinary_api_secret= 'nLVYTUFSGK2SqPINP5wCiAjLsTw' 
+# });cloudinary.config({
