--- a/.env
+++ b/.env
@@ -1,9 +1,16 @@
-port = 8080
+port = "8080"
 
 mongo_url = "mongodb://127.0.0.1:27017/Ecommerce"
 
-JWT_SECRET = shubham_soni_2001
+JWT_SECRET = "shubham_soni_2001"
 
+# Braintree api secret
+MERCHANT_ID = "8f6hcb5bn38jp9zd"
+PUBLIC_KEY = "2fts4q6dnjtpb8hg"
+PRIVATE_KEY = "1d0ff78410772bf8acb615c8cb798281"
+
+
+# cloudnery api secret
 cloudinary_cloud_name= 'dkh5hwdvu'
 cloudinary_api_key= '876916423722469' 
 cloudinary_api_secret= 'nLVYTUFSGK2SqPINP5wCiAjLsTw' 
